css/station-tool.css
html {
  scroll-behavior: smooth;
}

body {
  background-image: linear-gradient(#FFF, #EBF4DF);
}

header {
  background: url(../img/station-tool-header.jpg);
  /*--Parallax Scrolling Effect--*/
  height: 650px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 40px;
 }

/*--Navigation Menu Styles--*/
#mySidenav a {
    position: absolute; /* Position them relative to the browser window */
    left: -86px; /* Position them outside of the screen */
    transition: 0.3s; /* Add transition on hover */
    padding: 20px; 
    width: 100px;
    text-decoration: none; 
    font-size: 20px; 
    color: white; 
    border-radius: 0 5px 5px 0;
    font-family: 'Dosis', sans-serif;
  }
  
  #mySidenav a:hover {
    left: 0; 
  }
  
  #about {
    top: 50px;
    background-color: #522A89;
  }
  
  #journey {
    top: 130px;
    background-color: #6A2A89; 
  }
  
  #projects {
    top: 210px;
    background-color: #812A89; 
  }
  
  #tools {
    top: 290px;
    background-color: #892A79;
  }
  
  #contact {
    top: 370px;
    background-color: #7D035E;
  }

  .sticky {
    position: fixed;
    top: 0;
    left: 0;
    }
  
  /*--Icon Styling--*/
  i.fas, i.far {
    color: white;
    float: right;
    }

/*--Station Tool Page Styles*/

#station-tool-header {
    font-family: 'Allura', cursive;
    color:#FFF;
    font-size: 80px;
    padding-left: 80px;
    text-align: center;
    padding-top: 120px;
    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
  }

  p {
    font-family: 'Montserrat', sans-serif;
    font-size: 16px;
   }

@media only screen and (max-width: 450px) {
  p {
    text-align: center;
  }
}


  /*Station Tool Start: Inputting Information*/
.information {
  display: flex;
  justify-content: center;
}
@media only screen and (max-width: 450px) {
  .information {
    padding-left: 40px;
  }
}

  #description-p {
    max-width: 870px;
    text-align: center;
  }

  #description-start {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 80px;
    text-align: center;
  }

@media only screen and (max-width: 450px) {
  #description-start {
    padding-left: 40px;
  }
}

.starting-station-information {
    font-family: 'Roboto Condensed', sans-serif;
    text-align: left;
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    padding: 40px;
    background: linear-gradient(#FFF, #FCF3CF);
  }

fieldset {
  min-width: 0;
}

.station-holder {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.station-boxes {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 10px;
  }

  @media only screen and (max-width: 450px) {
  .station-boxes {
    flex-wrap: wrap;
    flex-direction: column;
  }
  }

.legend-names {
    text-align: center;
    font-family: 'Dosis', sans-serif;
    font-size: 22px;
  }
  
  label {
    font-family: 'Montserrat', sans-serif;
  }

  /*Station Tool End: Output Information*/
  .stations-output-container {
    text-align: center;
    }
  
  #stations-output-header {
    font-family: 'Dosis', sans-serif;
    text-align: center;
  }
  
 .station-output-section {
  font-family: 'Dosis', sans-serif;
    font-size: 20px;
  }
  
.station-1-output {
  display: flex;
  justify-content: center;
}

.station-2-3-output {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-evenly;
}

.stationary-name-materials {
  border-radius: 10%;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  padding: 5px;
}

.member-output {
  background: #F2F3F4;
  border-radius: 10%;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
  padding: 20px;
  text-align: center;
  margin: 8px;
}

.station-1 {
  background-color: #EC7063;
  border-radius: 10%;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

.station-2 {
  background-color:#F8C471;
  border-radius: 10%;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

.station-3 {
  background-color: #2DCACC;
  border-radius: 10%;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}
  /*Buttons*/
.center-buttons {
    display: flex;
    justify-content: center;
   }
  
#reset-button {
  margin: 25px;
  text-align: center;
  background-color: #812A89;
  color: white;
  font-family: 'Dosis', sans-serif;
  font-weight: bold;
  font-size: 18px;
  padding: 10px;
  border-radius: 12px;
  cursor: pointer;
}

#submit {
  margin: 10px;
  text-align: center;
  background-color: #2A8987;
  color: white;
  font-family: 'Dosis', sans-serif;
  font-weight: bold;
  font-size: 18px;
  padding: 10px;
  border-radius: 12px;
  cursor: pointer;
}

 #rotate-stations-button {
    text-align: center;
    background-color: #B83166;
    color: white;
    font-family: 'Dosis', sans-serif;
    font-weight: bold;
    font-size: 24px;
    padding: 10px;
    border-radius: 12px;
    cursor: pointer;
  }

  #rotate-stations-button:hover {
   background-color: #000;
   color: white;
   }

   /*General Styling Information*/
h2 {
  font-family: 'Dosis', sans-serif;
  text-align: center;
}

h4 {
  font-family: 'Dosis', sans-serif;
}

footer {
  font-family: 'Dosis', sans-serif;
    padding: 80px;
    display: flex;
    flex-direction: column;
    text-align: center;
  }

